# RTSPSream

./: .gitignore  CMakeLists.txt  LICENSE  README.md
android/: AndroidManifest.xml  build.gradle
android/jniLibs/libvlc-all-4.0.0-eap23/: AndroidManifest.xml  R.txt
android/jniLibs/libvlc-all-4.0.0-eap23/res/values/: values.xml
android/src/org/qtproject/example/: SystemUIHelper.java
android/src/org/qtproject/example/vlc/: VlcSurfaceHelper.java
include/: androidhelper.h  vlcbridge.h
include/vlc/: vlc.h
qml/: CustomTextInput.qml  Main.qml
res/: resources.qrc
src/: androidhelper.cpp  main.cpp  vlcbridge.cpp
